# thd-banking-anomaly-detection

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
routes/: agency.py  dataset.py  evaluation.py  isolation_forest.py  province_state.py
routes/utils/: load_dataset.py
scripts/: clean_dataset.py  download_dataset.sh
src/: clean_dataset.py
