[project]
name = "thd-banking-anomaly-detection"
version = "0.1.0"
description = "Anomaly Detection on Purchase Card Transaction Dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "icecream>=2.1.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
]
