[project]
name = "thd-banking-anomaly-detection"
version = "0.1.0"
description = "Anomaly Detection on Purchase Card Transaction Dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icecream>=2.1.4",
    "plotly>=6.1.2",
    "polars>=1.29.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
    "watchdog>=6.0.0",
]
